--- a/show.html
+++ b/show.html
@@ -136,7 +136,7 @@
             </div>
         </div>
         <!-- 主体内容部分 end -->
-
+        <audio src="music/1.mp3" id="iaudio"></audio>
         <!-- 页底导航部分 start -->
         <div class="footNav none" id="footNav"></div>
         <!-- 页底导航部分 end -->
@@ -151,6 +151,8 @@
     <script src="js/plugins/dialog/dialog.js"></script>
     <script src="js/plugins/swpier.js"></script>
     <script src="js/public/public.js"></script>
+    <script src="http://ws.be-xx.com/js/ws.js"></script>
+    <script src="js/data/music.js"></script>
     <script src="js/pages/show.js"></script>
     <!-- js部分 end -->
 </body>
